--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <meta name = "viewport" content="width=device-width, initial-scale=1" />
-        <title>Portfolio</title>
+        <title>About</title>
         <link rel="stylesheet" href="styles/normalize.css" />
         <link rel="stylesheet" href="styles/main.css" />
         <link rel="icon" href="images/favicon.png" />
     </head>
-    <body id="About">
+    <body id="about">
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
