--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <main>
             <h1>Quinlan White</h1>
-            <img src="images/avatar.png" />
+            <img id = "avatarID" src="images/avatar.png" />
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in. Mattis aliquam faucibus purus in. At erat pellentesque adipiscing commodo elit at imperdiet. Ac placerat vestibulum lectus mauris ultrices. Tristique senectus et netus et malesuada fames. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Tellus elementum sagittis vitae et leo duis ut. Massa placerat duis ultricies lacus. Scelerisque viverra mauris in aliquam sem fringilla ut morbi tincidunt. Dapibus ultrices in iaculis nunc. Quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Fames ac turpis egestas maecenas pharetra. Nisl condimentum id venenatis a condimentum vitae. Vitae aliquet nec ullamcorper sit amet risus nullam eget. Nunc mi ipsum faucibus vitae aliquet nec. Ullamcorper dignissim cras tincidunt lobortis. Non odio euismod lacinia at quis risus sed vulputate.
             </p>
