This is my website

--- a/index.html
+++ b/index.html
@@ -9,21 +9,30 @@
         <link rel="icon" href="images/favicon.png" />
     </head>
     <body id="about">
+        <header>
+            <h1>Quinlan D. White</h1>
+        </header>
         <nav>
-            <ul>
+            <ul id>
                 <li><a href="index.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="resume.html">Resume</a></li>
             </ul>
         </nav>
         <main>
-            <h1>Quinlan White</h1>
-            <img id = "avatarID" src="images/avatar.png" />
+            <h1>About</h1>
+            <img id = "avatarID" src="images/Senior Photo Stairs.jpg">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in. Mattis aliquam faucibus purus in. At erat pellentesque adipiscing commodo elit at imperdiet. Ac placerat vestibulum lectus mauris ultrices. Tristique senectus et netus et malesuada fames. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Tellus elementum sagittis vitae et leo duis ut. Massa placerat duis ultricies lacus. Scelerisque viverra mauris in aliquam sem fringilla ut morbi tincidunt. Dapibus ultrices in iaculis nunc. Quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Fames ac turpis egestas maecenas pharetra. Nisl condimentum id venenatis a condimentum vitae. Vitae aliquet nec ullamcorper sit amet risus nullam eget. Nunc mi ipsum faucibus vitae aliquet nec. Ullamcorper dignissim cras tincidunt lobortis. Non odio euismod lacinia at quis risus sed vulputate.
+                I'm a sophmore at Rose-Hulman Institute of Technology. I'm majoring in computer science. For fun I like 
+                to play video games, watch videos, and run. I'm also on my college's robotics team. I also made 
+                varisty on my cross country team back in high school. The reason I like computer science is that it was the first
+                thing in high school that I both thoroughly enjoy and I was good at it. In fact I finish my AP Computer Science
+                class 3 months ahead of schedule.
             </p>
             <p>
-                Suscipit tellus mauris a diam maecenas sed enim. Tincidunt ornare massa eget egestas purus viverra accumsan. Arcu risus quis varius quam quisque. Scelerisque purus semper eget duis at tellus at urna. Pulvinar pellentesque habitant morbi tristique senectus. Mollis aliquam ut porttitor leo a diam sollicitudin. Nec tincidunt praesent semper feugiat nibh sed pulvinar proin. Faucibus et molestie ac feugiat. Commodo odio aenean sed adipiscing diam. Duis tristique sollicitudin nibh sit. Interdum posuere lorem ipsum dolor sit. Ut diam quam nulla porttitor massa. Purus non enim praesent elementum facilisis leo vel fringilla est. Accumsan in nisl nisi scelerisque eu ultrices vitae auctor. Ac turpis egestas integer eget aliquet nibh praesent tristique. Arcu risus quis varius quam quisque id diam.
+                I also enjoy skiing because I am quite good at it. In addiation I'm also a very lucky skier the amount of times
+                I could ave been seriously hurt are more numerous than I like to admit. My favorite game is Persona 5 Royal it was
+                really fun and it honestly had a major impact on my character.
             </p>
         </main>
         <footer>
