--- a/resume.html
+++ b/resume.html
@@ -9,14 +9,82 @@
         <link rel="icon" href="images/favicon.png" />
     </head>
     <body id="resume">
+        <header>
+            <h1>Quinlan D. White</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="resume.html">Resume</a></li>
             </ul>
+            <div id = buttonPad>
+                <button type="button" data-id = "education" class="btn btn-danger">Education</button>
+                <button type="button" data-id = "skills" class="btn btn-danger">Skills</button>
+                <button type="button" data-id = "employment" class="btn btn-danger">Employment</button>
+                <button type="button" data-id = "extracurriculars" class="btn btn-danger">Extracurriculars</button>
+                <button type="button" data-id = "hobbies" class="btn btn-danger">Hoddies</button>
+                <button type="button" data-id = "awards" class="btn btn-danger">Awards</button>
+            </div>
         </nav>
-        
+
+        <main>
+            <h2 id = "education">Education</h2>
+            <h3>AUGUST 2020-PRESENT</h3>
+            <div><strong>Rose-Hulman institute of Technology, Bachelor of Computer Science, Computer Science </strong>
+                <ul>GPA: 3.05</ul>
+                <ul>
+                    <li>Intro to Software Development</li>
+                    <li>Object-Oriented Software Development</li>
+                    <li>Intro to Computer Systems</li>
+                    <li>Introduction to Digital System</li>
+                    <li>Computer Architecture 1</li>
+                    <li>Intro to Web Programming</li>
+                </ul>
+            </div>
+
+            <h3>AUGUST 2016-MAY 2020</h3>
+            <div><strong>St. John's Jesuit High School and Academy, Diploma</strong></div>
+
+            <h2 id = "skills">Skills</h2>
+            <div>
+                <ul>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>C</li>
+                </ul>
+            </div>
+
+            <h2 id = "employment">Employment</h2>
+            <h3>JUNE 2021-AUGUST 2021</h3>
+            <div>Retail, North Shore Outfitters, 119 S Waukazoo St, Northport, MI 49670</div>
+
+            <h2 id = "extracurriculars">Extracurriculars</h2>
+            <div>
+                <ul>
+                    <li>Rose-Hulman Institute of Technology Underwater Robotics Team</li>
+                    <li>High School Cross Country (4 yrs)</li>
+                    <li>High School Track (3 yrs)</li>
+                    <li>High School Esports</li>
+                </ul>
+            </div>
+
+            <h2 id = "hobbies">Hobbies</h2>
+            <div>
+                <ul>
+                    <li>Video Games</li>
+                    <li>Watching Videos</li>
+                    <li>Running</li>
+                    <li>Skiing</li>
+                </ul>
+            </div>
+
+            <h2 id = "awards">Awards</h2>
+            <div>High School Cross Country Varity Letter</div>
+
+
+        </main>
+
         <footer>
             You can email me at whiteqd@rose-hulman.edu
         </footer>
