--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,9 @@
         <link rel="icon" href="images/favicon.png" />
     </head>
     <body id="portfolio">
+        <header>
+            <h1>Quinlan D. White</h1>
+        </header>
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
@@ -20,15 +23,19 @@
             <h1>Portfolio</h1>
             <ul id=portfolioItems>
                 <li>
-                    <h2><a href="#">Project 1 Name</a></h2>
-                    <img src="images/portfolio/project1.png" />
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Velit sed ullamcorper morbi tincidunt ornare massa. Non quam lacus suspendisse faucibus. Feugiat in ante metus dictum at. Ac turpis egestas sed tempus urna. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Tellus orci ac auctor augue mauris augue neque gravida. Ornare lectus sit amet est placerat in egestas erat imperdiet. Neque aliquam vestibulum morbi blandit cursus risus. Duis at tellus at urna condimentum mattis pellentesque id. Feugiat in ante metus dictum at tempor commodo ullamcorper. Nunc lobortis mattis aliquam faucibus purus. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Natoque penatibus et magnis dis. Eu turpis egestas pretium aenean. Aliquet enim tortor at auctor urna nunc id cursus metus.</p>
+                    <h2><a href="#">JetPac</a></h2>
+                    <img src="images/portfolio/JetPac.png" />
+                    <p>It's just a game me and my team made for CSSE 220. It features 3 premade levels, different enemy types, and an endless mode
+                       (this one was made solely by me).
+                    </p>
                     
                 </li>
                 <li>
-                    <h2><a href="#">Project 2 Name</a></h2>
-                    <img src="images/portfolio/project2.png" />
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Velit sed ullamcorper morbi tincidunt ornare massa. Non quam lacus suspendisse faucibus. Feugiat in ante metus dictum at. Ac turpis egestas sed tempus urna. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Tellus orci ac auctor augue mauris augue neque gravida. Ornare lectus sit amet est placerat in egestas erat imperdiet. Neque aliquam vestibulum morbi blandit cursus risus. Duis at tellus at urna condimentum mattis pellentesque id. Feugiat in ante metus dictum at tempor commodo ullamcorper. Nunc lobortis mattis aliquam faucibus purus. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Natoque penatibus et magnis dis. Eu turpis egestas pretium aenean. Aliquet enim tortor at auctor urna nunc id cursus metus.</p>
+                    <h2><a href="#">Space Invaders</a></h2>
+                    <img src="images/portfolio/space_invaders.png" />
+                    <p>
+                        This was something we had to make for CSSE 120 it was pretty easy, but I find it fun.
+                    </p>
                     
                 </li>
             </ul>
